# llm-chatter

./: .gitignore  AGENTS.md  LICENSE  README.md  drizzle.config.ts  electron-builder.json  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.github/workflows/: ai-code-review.yml  build.yml  release.yml  version-bump.yml
apps/desktop/: electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  next.config.ts  package.json  tsconfig.json
apps/web/: next.config.ts  package.json
desktop-runtime/: build-sea.mjs  build.mjs  tsconfig.json
desktop-runtime/src/: server.ts
docs/: SIGNING.md  icon-creation-guide.md  tool-block-design.md
drizzle/: 0000_fast_roland_deschain.sql
drizzle/meta/: _journal.json
electron/: chat-runtime.ts  chat-worker.ts  env.d.ts  main.ts  preload.ts  tray.ts  tsconfig.json  updater.ts
electron/db/: client.ts  encryption.ts  migrations.ts  migrator.ts  seed.ts
electron/ipc/: app-config.ts  assistants.ts  catalog.ts  chat.ts  conversations.ts  dialogs.ts  export.ts  index.ts  (+7 more)
prisma/: schema.prisma  seed-data.ts  seed.ts
scripts/: electron-build-renderer.mjs  electron-dev.mjs  electron-mock.js  electron-package.mjs  release.mjs  verify-electron-ipc.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: crypto.rs  db.rs  desktop_runtime.rs  lib.rs  main.rs
src-tauri/src/commands/: assistants.rs  chat.rs  conversations.rs  export.rs  mod.rs  models.rs  providers.rs  search.rs  utils.rs
(+179 files in other folders)
